src/objects/FXRates__c.object
<CustomObject>
    <description>This object stores the foreign exchange rate retrieved from EMC SAP.</description>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <description>Currency Exchange Rate</description>
        <inlineHelpText>Currency Exchange Rate</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Currency__c</fullName>
        <description>Foreign Currency (Always Non-USD)</description>
        <inlineHelpText>Foreign Currency (Always Non-USD)</inlineHelpText>
        <label>From Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Currency__c</fullName>
        <description>Converted To Currency (Always USD)</description>
        <inlineHelpText>Converted To Currency (Always USD)</inlineHelpText>
        <label>To Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <description>Exchange Rate Date</description>
        <inlineHelpText>Exchange Rate Date</inlineHelpText>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Exchange Rate Date</description>
        <inlineHelpText>Exchange Rate Date</inlineHelpText>
        <label>Valid To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>FXRates</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>From_Currency__c</columns>
        <columns>To_Currency__c</columns>
        <columns>Exchange_Rate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Valid_From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>From_Currency__c</columns>
        <columns>To_Currency__c</columns>
        <columns>Exchange_Rate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Valid_From__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/30/2016</value>
        </filters>
        <filters>
            <field>Valid_From__c</field>
            <operation>lessThan</operation>
            <value>1/2/2017</value>
        </filters>
        <filters>
            <field>From_Currency__c</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <label>FX Rates Errors 12/30 and 1/1</label>
    </listViews>
    <nameField>
        <displayFormat>FX-{MM}{DD}{YYYY}_{0}</displayFormat>
        <label>FXRate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FXRates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>